# mal

./: .clang-format  .gitmodules  CMakeLists.txt
example/: CMakeLists.txt  main.c
example/glfm/src/: glfm_platform_android.c  glfm_platform_ios.m
example/platform/android/: .cproject  .project  AndroidManifest.xml  build.gradle
example/platform/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
example/platform/android/app/src/main/: AndroidManifest.xml
example/platform/android/app/src/main/res/values/: strings.xml
example/platform/android/gradle/wrapper/: gradle-wrapper.properties
example/platform/android/jni/: Android.mk
example/platform/android/res/values/: strings.xml
example/platform/android/src/main/: AndroidManifest.xml
example/platform/emscripten/: Makefile
example/platform/ios/mal-example/: mal-example-Info.plist
example/platform/ios/mal-example.xcodeproj/: project.pbxproj
example/platform/ios/mal-example.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/platform/ios/mal_example/: mal_example-Info.plist
example/platform/ios/mal_example.xcodeproj/: project.pbxproj
example/platform/ios/mal_example.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/src/: file_compat.h  main.c  ok_wav.c  stress_test.c
include/: mal.h
src/: mal_android.c  mal_audio_abstract.h  mal_audio_abstract_types.h  mal_audio_coreaudio.h  mal_audio_openal.h  mal_audio_opensl.h  mal_audio_pulseaudio.h  mal_audio_webaudio.h  mal_audio_xaudio2.h  mal_emscripten.c  mal_ios.m  mal_openal.h  mal_platform_android.c  mal_platform_emscripten.c  mal_platform_ios.m  mal_platform_linux.c  mal_platform_macos.m  mal_platform_windows.c  mal_platform_windows.cpp  mal_vector.h
